fix issues in the footer on small screen an others small glitches

--- a/assets/styles/myCss.scss
+++ b/assets/styles/myCss.scss
@@ -681,13 +681,21 @@ details {
 
 footer {
     height: 30px;
-    padding: 10px 0 10px 20px;
+    padding: 10px;
     background-color: #373737;
     color: #ffffff;
+    @media only screen and (min-width: 490px) {
+        padding: 10px 0 10px 20px;
+    } 
+    
 
     .icon {
-        height: 30px;
-        width: 30px;
+        height: 27px;
+        width: 27px;
+        @media only screen and (min-width: 490px) {
+            height: 30px;
+            width: 30px;
+        } 
     }
     a {
         padding: 0 3px;
@@ -740,7 +748,7 @@ footer {
 }
 .to-right {
     float: right;
-    margin-right: 20px;
+    margin-right: 10px;
     @media only screen and (min-width: 490px) {
         margin-right: 40px;
     } 
